Fix on ios

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -215,7 +215,11 @@ input:focus{
 	justify-content: space-between;
 	align-items: center;
 	padding: calc(36rem / 16);
-	padding-bottom: 0;
+	//padding-bottom: 0;
+	background: #22223d;
+	position: sticky;
+	top: 0;
+    z-index: 1;
 	&-left{
 		&-title{
 			color:#fff;
@@ -317,6 +321,7 @@ input:focus{
 	}
 	&:last-child{
 		grid-area: h6;
+		position: relative;
 		// margin-right: calc(36rem / 16);
 		flex-direction: column;
 		justify-content: flex-start;
@@ -371,7 +376,7 @@ input:focus{
 		padding-top:15px;
 		display: flex;
 		justify-content: space-between;
-		width: 70%;
+		width: 100%;
 		align-items: center;
 	}
 	&-index{
@@ -419,6 +424,9 @@ input:focus{
 		}
 	}
 }
+.mini-chart{
+	width: 70%;
+}
 .btn_toggle{
 	position: relative;
 	width: 60px;
@@ -457,6 +465,40 @@ input:focus{
 			bottom: 4px;
 			-webkit-transition: .4s;
 			transition: .4s;
+		}
+	}
+}
+.loader{
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #22223d;
+	opacity: 0.9;
+	transition: opacity 0.75s,visibility 0.75s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	&-hidden{
+		opacity: 0;
+		visibility: hidden;
+	}
+	&:after{
+		content:'';
+		width: 25px;
+		height: 25px;
+		border: 10px solid #dddddd;
+		border-top-color: #7449f5; 
+		border-radius: 50%;
+		animation: loading 0.75s ease infinite;
+	}
+	@keyframes loading {
+		from{
+			transform: rotate(0turn);
+		}
+		to{
+			transform: rotate(1turn);
 		}
 	}
 }
@@ -512,6 +554,7 @@ input:focus{
 .layout-content{
 	background: #30304d;
 	margin:$component__space;
+	margin-top: 0;
 }
 thead{text-align: center;}
 table, tr, th, td {
@@ -682,6 +725,8 @@ tr{
 .input-box{
 	width: 100%;
 	height: 40px;
+	display: flex;
+	align-items: center;
 	box-sizing: border-box;
 	outline: 0.3mm solid $line__color;
 	padding: 10px 15px;
@@ -832,7 +877,7 @@ tr{
 	min-height: 400px;
 	min-width: 800px;
 	background: #22223d;
-	position:absolute;
+	position:fixed;
 	top: 50%;
  	left: 50%;
   	transform: translate(-50%, -50%);
@@ -865,8 +910,11 @@ tr{
   		padding: $component__space;
   		font-size: 1rem;
   		& input, select{
-  			font-size: 1rem;
-  			font-family: "Poppins", sans-serif;
+  			appearance:none;
+  			color: #000;
+  			-webkit-color:#000;
+  			-webkit-appearance: none;
+  			font-family: "Poppinss", sans-serif;
   			border-radius: 3px;
     		border:none;
     		max-width: 60%;
@@ -922,6 +970,7 @@ tr{
 	&-input{
 		flex:1;
 		padding:10px;
+		box-sizing: border-box;
 		&[type="color"]{
 			padding: 0;
 			height: 45px;
@@ -1258,7 +1307,7 @@ input:checked ~ label .dialog__form-category-field-icon-label{
 		padding: 15px 30px 15px 30px;
 	}
 	.table__body-header{
-		padding-top: 15px;
+		//padding-top: 15px;
 	}
 	.header{
 		&__logo{
@@ -1286,7 +1335,7 @@ input:checked ~ label .dialog__form-category-field-icon-label{
 		}
 		&__container{
 			padding: $component__space;
-			padding-bottom: 0;
+			//padding-bottom: 0;
 		}
 	}
 
@@ -1387,9 +1436,9 @@ input:checked ~ label .dialog__form-category-field-icon-label{
 	.nav__categories{
 		z-index: 3;
 	}
-	.dialog__content{
-		top:30%;
-	}
+	// .dialog__content{
+	// 	top:30%;
+	// }
 }
 
 @media screen and (max-width: 1023px){
@@ -1619,11 +1668,11 @@ td{
 
 @media screen and (max-width: 767px) {
 	.wrapper{
-		width: 412px;
+		width: 428px;
 	}
 	.header{
 		&__menu{
-			width: 412px;
+			width: 428px;
 			&-left{
 				padding-left: 1rem;
 				&-item{
@@ -1737,7 +1786,7 @@ td{
 		width: 95%;
 		margin: 0 auto;
 		border: none;
-		margin-top: 20px;
+		margin-top: 10px;
 	}
 	thead{
 		display: none;
@@ -1764,7 +1813,11 @@ td{
 	}
 	.table__body{
 		&-header{
-			flex-direction: row-reverse;
+			// flex-direction: row-reverse;
+			padding: 0;
+			width: 95%;
+			margin: 0 auto;
+			padding-top: 10px;
 			&-search{
 				display: none;
 			}
@@ -1843,24 +1896,46 @@ td{
 	// .main__content{
 	// 	margin-bottom: $component__space;
 	// }
-	.dialog__content{
-		top:40%;
-	}
-	.dialog__category{
-		top:45%;
-	}
+	// .dialog__content{
+	// 	top:40%;
+	// }
+	// .dialog__category{
+	// 	top:45%;
+	// }
 	.dialog__content-body{
 		& input, select {
 			max-width: unset;
 		}
 	}
-	.dialog__category {
-		top:14%;
+	// .dialog__category {
+	// 	top:14%;
+	// }
+	.layout__chart{
+		&-header{
+			justify-content: space-between;
+			width: 100%;
+			margin-top: 15px;
+			margin-bottom: 15px;
+		}
+	}
+	.mini-chart{
+		padding: 0;
+		width: 75%;
+	}
+	.btn_toggle-slider{
+		&:before{
+			content:'expenditure';
+			left:16px;
+		}
+	}
+	.btn_toggle input:checked + .btn_toggle-slider:before {
+		content:'total sales';
+		left:20px;
 	}
 }
 
 
-@media screen and (max-width: 411px) {
+@media screen and (max-width: 427px) {
 	.wrapper{
 		width: 390px;
 	}
@@ -1950,7 +2025,7 @@ td{
 	}
 	.header__container{
 		padding: 10px;
-		padding-bottom: 0;
+		//padding-bottom: 0;
 	}
 	.dialog__content{
 		min-width: 95%;
